api modified for tenants
